<resources>
    <string name="app_name">iblauda</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="nav_item_home">Home</string>
    <string name="nav_item_chat">Chat</string>
    <string name="nav_item_login">Login</string>
    <string name="nav_item_logout">Log out</string>

    <string name="menu_contact_us">Contact Us</string>
    <!-- navigation drawer item labels none login  -->
    <string-array name="nav_drawer_labels">
        <item>@string/nav_item_home</item>
        <item>@string/title_mycar</item>
        <item>@string/nav_item_chat</item>
        <item>@string/nav_item_login</item>
    </string-array>

    <!-- navigation drawer item labels sucess login  -->
    <string-array name="nav_drawer_labelsLoginSucess">
        <item>@string/nav_item_home</item>
        <item>@string/title_mycar</item>
        <item>@string/nav_item_chat</item>
        <item>@string/title_account</item>
        <item>@string/nav_item_logout</item>
    </string-array>


    <string name="title_home">Home</string>
    <string name="title_mycar">My Order</string>
    <string name="title_chat">Chat</string>
    <string name="title_account">My Account</string>
    <string name="title_Login">Login</string>

    <!-- Keep them in order as the titles are in -->
    <integer-array name="nav_drawer_iconsLogin">
        <item>@drawable/ic_car</item>
        <item>@drawable/ic_car</item>
        <item>@drawable/ic_car</item>
        <item>@drawable/ic_car</item>
    </integer-array>

    <!-- Keep them in order as the titles are in -->
    <integer-array name="nav_drawer_iconsscce">
        <item>@drawable/ic_car</item>
        <item>@drawable/ic_car</item>
        <item>@drawable/ic_car</item>
        <item>@drawable/ic_car</item>
        <item>@drawable/ic_car</item>
    </integer-array>


    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item >Home</item>
        <item >My Cars</item>
        <item >Chat</item>
        <item >Login</item>
        <item >Setting</item>
    </string-array>

    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/ic_car</item>
        <item>@drawable/ic_car</item>
        <item>@drawable/ic_car</item>
        <item>@drawable/ic_car</item>
        <item>@drawable/ic_car</item>
        <item>@drawable/ic_car</item>
    </array>



    <!-- iblauda str-->
    <string name="register_now">Register now</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="pwd">Password</string>
    <string name="noResult">Result Not Found</string>
    <string name="userId">User ID</string>
    <string name="order">ORDER THIS CAR</string>
    <!-- string register-->
    <string name="ID">ID</string>
    <string name="pwdComfirm">Confirm Password</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string-array name="arr_mak">
        <item >Make</item>
    </string-array>

    <!-- Array-->
    <!--Order activity String-->
    <string name="headerMycar">My Order</string>
    <!-- Datial string-->
    <string name="header_detail">Detail</string>
    <string name="location_str">Location</string>
    <string name="city_str">City</string>
    <string name="offer_no_str">OFFER NO.</string>
    <string name="chassno_str">CHASSIS NO.</string>
    <string name="car_status_str">CAR STATUS</string>
    <string name="make_str">MAKE</string>
    <string name="model_str">MODEL</string>
    <string name="grade_str">GRADE</string>
    <string name="model_year_str">MODEL YEAR</string>
    <string name="manufactured_str">MANUFACTURED</string>
    <string name="first_reg_data_str">FIRST REG. DATE</string>
    <string name="transmission_str">TRANSMISSION</string>
    <string name="engin_size_str">ENGINE SIZE</string>
    <string name="mileage_str">MILEAGE</string>
    <string name="fuel_str">FUEL</string>
    <string name="color_str">COLOR</string>
    <string name="car_seat">SEATS</string>

    <string name="status_str">STATUS</string>
    <string name="body_type_str">BODY TYPE</string>
    <string name="driver_type_str">DRIVE TYPE</string>
    <string name="fob_str">FOB</string>
    <string name="memo">MEMO</string>
    <string name="sold_out">Sold Out</string>


    <!-- Massage-->
    <string name="message_field_hint">"Write here"</string>
    <string name="message_button_send">"Send"</string>

    <!-- Search activity-->
    <string-array name="SpLocation">
        <item >Location</item>
    </string-array>
    <string name="offerclassno">Offer / Chassis No:</string>
    <string name="button_search">Search</string>

    <string-array name="arr_model">
        <item >Model</item>

    </string-array>
    <string-array name="arr_maxprice">
        <item >Max Price</item>

    </string-array>

    <string-array name="arr_minprice">
        <item >Min Price</item>

    </string-array>
    <string-array name="arr_maxyear">
        <item >Max Year</item>

    </string-array>
    <string-array name="arr_minyear">
        <item >Min Year</item>
        <item >Batambong</item>
        <item >Banteay MeanChey</item>

    </string-array>

    <string-array name="arr_gener">
        <item >Gender</item>

    </string-array>

    <string-array name="arr_country">
        <item >Country</item>

    </string-array>

    <string name="memberId">Member Id</string>
    <string name="fulname">Full Name</string>
    <string name="email1">Email</string>
    <string name="country1">Country</string>


    <!-- Pushnotification-->
    <string name="title_activity_main">Push Notifications</string>
    <string name="error_config">Please set the %1$s constant and recompile the app.</string>
    <string name="already_registered">Device is already registered on server.</string>
    <string name="gcm_registered">From GCM: device successfully registered!</string>
    <string name="gcm_unregistered">From GCM: device successfully unregistered!</string>
    <string name="gcm_message">From GCM: you got message!</string>
    <string name="gcm_error">From GCM: error (%1$s).</string>
    <string name="gcm_recoverable_error">From GCM: recoverable error (%1$s).</string>
    <string name="gcm_deleted">From GCM: server deleted %1$d pending messages!</string>
    <string name="server_registering">Trying (attempt %1$d/%2$d) to register device on Demo Server.</string>
    <string name="server_registered">From Demo Server: successfully added device!</string>
    <string name="server_unregistered">From Demo Server: successfully removed device!</string>
    <string name="server_register_error">Could not register device on Demo Server after %1$d attempts.</string>
    <string name="server_unregister_error">Could not unregister device on Demo Server (%1$s).</string>
    <string name="options_register">Register</string>
    <string name="options_unregister">Unregister</string>
    <string name="options_clear">Clear</string>
    <string name="options_exit">Exit</string>

</resources>