<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
tools:context="info.androidhive.materialdesign.activity.LoginActivity">
    <include
        android:id="@+id/toolbar_actionbar"
        layout="@layout/toolbar_default"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/logo_home" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"
            android:layout_marginTop="15dp"
            android:orientation="vertical" >
            <TextView
                android:id="@+id/error_messages"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/colorPrimary" />

            <EditText
                android:id="@+id/txt_id"
                android:maxLength="20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="50"
                android:paddingLeft="10sp"
                android:lines="1"
                android:paddingTop="10sp"
                android:paddingBottom="10sp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/format_texbox"
                android:hint="@string/ID"
                >

                <requestFocus />
            </EditText>
            <EditText
                android:id="@+id/txt_register_pwd"
                android:maxLength="20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="50"
                android:paddingLeft="10sp"
                android:lines="1"
                android:paddingTop="10sp"
                android:paddingBottom="10sp"
                android:hint="@string/pwd"
                android:background="@drawable/format_texbox"
                android:inputType="textPassword" >
            </EditText>

            <EditText
                android:id="@+id/txt_pwdComfirm"
                android:maxLength="20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="50"
                android:paddingLeft="10sp"
                android:lines="1"
                android:paddingTop="10sp"
                android:paddingBottom="10sp"
                android:layout_marginTop="5sp"
                android:layout_marginBottom="5sp"
                android:hint="@string/pwdComfirm"
                android:background="@drawable/format_texbox"
                android:inputType="textPassword" >
            </EditText>

            <EditText
                android:id="@+id/txt_register_emails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="40"
                android:paddingLeft="10sp"
                android:lines="1"
                android:paddingTop="10sp"
                android:paddingBottom="10sp"
                android:layout_marginBottom="5sp"
                android:hint="@string/email"
                android:background="@drawable/format_texbox"
                android:inputType="textEmailAddress" >
            </EditText>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <LinearLayout
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.45"
                    android:gravity="right"
                    android:orientation="vertical" >
                    <EditText
                        android:id="@+id/txt_fName"
                        android:maxLength="20"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="100"
                        android:paddingLeft="10sp"
                        android:lines="1"
                        android:paddingTop="10sp"
                        android:paddingBottom="10sp"
                        android:hint="@string/firstname"
                        android:background="@drawable/format_texbox"
                        android:gravity="left"
                        android:layout_marginRight="2sp"
                        android:inputType="text" >
                    </EditText>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.55"
                    android:gravity="left"
                    android:orientation="vertical" >

                    <EditText
                        android:id="@+id/txt_lName"
                        android:maxLength="20"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="100"
                        android:paddingLeft="10sp"
                        android:lines="1"
                        android:paddingTop="10sp"
                        android:paddingBottom="10sp"
                        android:layout_marginLeft="2sp"
                        android:hint="@string/lastname"
                        android:background="@drawable/format_texbox"
                        android:gravity="left"
                        android:inputType="text" >
                    </EditText>

                </LinearLayout>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10sp"
                android:layout_marginTop="15dp"
                android:orientation="vertical" >

                <Spinner
                    android:id="@+id/sp_country"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/format_texbox"
                    android:entries="@array/arr_country" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <LinearLayout
                    android:layout_width="70dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.55"
                    android:gravity="right"
                    android:orientation="vertical" >
                    <EditText
                        android:id="@+id/txt_mobile1"
                        android:maxLength="5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:paddingLeft="10sp"
                        android:lines="1"
                        android:paddingTop="10sp"
                        android:paddingBottom="10sp"
                        android:clickable="false"
                        android:cursorVisible="false"
                        android:focusableInTouchMode="false"
                        android:background="@drawable/format_texbox"
                        android:gravity="left"
                        android:layout_marginRight="2sp"
                        android:inputType="number" >
                    </EditText>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="70dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.55"
                    android:gravity="left"
                    android:orientation="vertical" >

                    <EditText
                        android:id="@+id/txt_mobile2"
                        android:maxLength="20"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="20"
                        android:paddingLeft="10sp"
                        android:lines="1"
                        android:paddingTop="10sp"
                        android:paddingBottom="10sp"
                        android:layout_marginLeft="2sp"
                        android:background="@drawable/format_texbox"
                        android:gravity="left"
                        android:inputType="number" >
                    </EditText>

                </LinearLayout>

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical" >

            <Button
                android:id="@+id/btn_register"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="111dp"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_marginTop="10dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/textColorPrimary"
                android:background="@drawable/button_radius"
                android:text="@string/register" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/txtmassage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>





        <!-- sss-->
    </LinearLayout>
</ScrollView>

</LinearLayout>
