<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/AbsoluteLayout1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center" >

    <include
        android:id="@+id/toolbar_actionbar"
        layout="@layout/toolbar_default"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
        <ScrollView
            android:id="@+id/scrollView1"
            android:layout_width="fill_parent"
            android:layout_marginTop="55dp"
            android:paddingBottom="100dp"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" >
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical" >

                        <ImageView
                            android:id="@+id/imageView1"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginBottom="20sp"
                            android:layout_marginTop="20sp"
                            android:src="@drawable/logo_home" />
                    </LinearLayout>

                    <TableLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#e6e2e2"
                        android:paddingTop="2sp"
                        android:shrinkColumns="5"
                        android:stretchColumns="*" >

                        <TableRow
                            android:id="@+id/tableRowImage2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/textColorPrimary"
                            android:layout_marginBottom="1dp"
                            android:padding="5sp" >


                            <TextView
                                android:id="@+id/textView2"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginRight="10sp"
                                android:gravity="left"
                                android:layout_marginLeft="5dp"
                                android:paddingTop="5dp"
                                android:paddingBottom="5dp"
                                android:textStyle="bold"
                                android:text="@string/memberId" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textAppearance="?android:attr/textAppearanceMedium"
                                android:text=":"
                                android:id="@+id/textView22"
                                android:layout_column="1" />

                            <TextView
                                android:id="@+id/txtId"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textStyle="bold"
                                android:layout_column="2" />

                        </TableRow>

                        <TableRow
                            android:id="@+id/tableRowImage3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="5sp"
                            android:layout_marginBottom="1dp"
                            android:background="@color/textColorPrimary" >

                            <TextView
                                android:id="@+id/textView3"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginRight="10sp"
                                android:gravity="left"
                                android:layout_marginLeft="5dp"
                                android:paddingTop="5dp"
                                android:textStyle="bold"
                                android:paddingBottom="5dp"
                                android:text="@string/fulname" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textAppearance="?android:attr/textAppearanceMedium"
                                android:text=":"
                                android:id="@+id/textView23"
                                android:layout_column="1" />

                            <TextView
                                android:id="@+id/txtcar_fullanme"
                                android:layout_width="wrap_content"
                                android:textStyle="bold"
                                android:layout_height="wrap_content"
                                android:layout_column="2" />
                        </TableRow>

                        <TableRow
                            android:id="@+id/tableRowImage4"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="1dp"
                            android:background="@color/textColorPrimary"
                            android:padding="5sp" >

                            <TextView
                                android:id="@+id/textView4"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginRight="10sp"
                                android:gravity="left"
                                android:layout_marginLeft="5dp"
                                android:paddingTop="5dp"
                                android:paddingBottom="5dp"
                                android:textStyle="bold"
                                android:text="@string/email1"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textAppearance="?android:attr/textAppearanceMedium"
                                android:text=":"
                                android:id="@+id/textView24"
                                android:layout_column="1" />

                            <TextView
                                android:id="@+id/txtemail"
                                android:layout_width="wrap_content"
                                android:textStyle="bold"
                                android:layout_height="wrap_content"
                                android:layout_column="2" />
                        </TableRow>

                        <TableRow
                            android:id="@+id/tableRowImage17"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="1dp"
                            android:background="@color/textColorPrimary"
                            android:padding="5sp" >

                            <TextView
                                android:id="@+id/textView17"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginRight="10sp"
                                android:gravity="left"
                                android:layout_marginLeft="5dp"
                                android:paddingTop="5dp"
                                android:paddingBottom="5dp"
                                android:textStyle="bold"
                                android:text="@string/country1" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textAppearance="?android:attr/textAppearanceMedium"
                                android:text=":"
                                android:id="@+id/textView25"
                                android:layout_column="1" />

                            <TextView
                                android:id="@+id/coutyy"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textStyle="bold"
                                android:layout_column="2" />

                        </TableRow>
                    </TableLayout>



                </LinearLayout>
        </ScrollView>


</RelativeLayout>